--- a/UI/Style_Sheets/custom.css
+++ b/UI/Style_Sheets/custom.css
@@ -1,13 +1,3 @@
-
-/*Five-Color Scheme
-color1: @color1;
-color2: @color2;
-color3: @color3;
-color4: @color4;
-color5: @color5;
-*/
-
-
 /*Global*/
 QCheckBox[objectName|="checkBox_"]{
     background-color: rgba(0,0,0,0);
@@ -16,34 +6,66 @@ QCheckBox[objectName|="checkBox_"]{
     font-size: 10pt;
 }
 QCheckBox[objectName|="checkBox_"]:disabled{
-    color: @color1;
+    color: @color13;
     background-color: rgba(0,0,0,0);
 }
 QCheckBox[objectName|="checkBox_"]::indicator:unchecked {
-    image: url(@icon_path/dark-unchecked.png);
+    image: url(@icon_path/@unchecked_enabled);
 }
 QCheckBox[objectName|="checkBox_"]::indicator:checked {
-    image: url(@icon_path/dark-checked.png);
+    image: url(@icon_path/@checked_enabled);
 }
 QCheckBox[objectName|="checkBox_"]::indicator:disabled:checked {
-    image: url(@icon_path/dark-checked-disabled.png);
+    image: url(@icon_path/@checked_disabled);
 }
 QCheckBox[objectName|="checkBox_"]::indicator:disabled:unchecked {
-    image: url(@icon_path/dark-unchecked-disabled.png);    
+    image: url(@icon_path/@unchecked_disabled);    
 }
 QComboBox{
-    font-family: "Ubuntu";
+    font: 11pt "Ubuntu";
+    padding: 2px 0px 1px 4px;  /*Needed for color to change, also prevents right align*/
+    border: 1px solid #111111;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
+    selection-color: #FFFFFF;
+    selection-background-color: #F6724F;
+}
+QComboBox::enabled{
+    color: @color12;
 }
 QComboBox::drop-down {
     border: none;
 }
 QComboBox::down-arrow {
-    image: url(@icon_path/dark-down-arrow.png);
+    image: url(@icon_path/@down_arrow_enabled);
     background-color: transparent;
 }
 QComboBox::down-arrow:disabled {
-    image: url(@icon_path/dark-down-arrow-disabled.png);
+    image: url(@icon_path/@down_arrow_disabled);
     background-color: transparent;
+}
+QComboBox::item {
+    color: @color4;
+}
+QComboBox:disabled{
+    color: @color13;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
+}
+QComboBox:hover{
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
+}
+QComboBox::item:selected{
+    background-color: #F6724F;
+    color: #FFFFFF;
+    border: 1px solid transparent;  /* needs border to move indicator */
+}
+QComboBox::indicator{
+    background-color:transparent;
+    selection-background-color:transparent;
+    color:transparent;
+    selection-color:transparent;
+}
+QComboBox QListView{
+    padding: 2px 0px 1px 4px;
 }
 QDoubleSpinBox{
     background-color: @color5;
@@ -53,7 +75,7 @@ QDoubleSpinBox{
 }
 QDoubleSpinBox:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
     border: 1px solid @color1;
 }
 QDoubleSpinBox::up-button {
@@ -78,7 +100,7 @@ QListView{
 }
 QListView:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
     border: 1px solid @color1;
 }
 QListWidget{
@@ -89,7 +111,7 @@ QListWidget{
 }
 QListWidget:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
     border: 1px solid @color1;
 }
 QMenu{
@@ -101,15 +123,25 @@ QMenu::item{
     background-color: transparent;
 }
 QMenu::item:selected{
-    color: @color4;
-    background-color: @color3;
+    color: #FFFFFF;
+    background-color: #F6724F;
 }
 QMenu:selected{
     background-color: @color3;
 }
 QMenu::item:disabled{
-    color: darkgray;
+    color: @color13;
 }
+QMenuBar {
+    color: @color4;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, x3: 0, y3: 1, stop: 0 @color2, stop: 0.1 @color5, stop: 1 @color1);
+}
+QMenuBar#menubar::item:focus:pressed {
+    color: #FFFFFF;
+    background-color: #F6724F;
+}
+/*QMenuBar#menubar::item:selected {background: transparent;}*/
+QMenuBar#menubar::item{background: transparent;}
 QPlainTextEdit{
     background-color: @color5;
     color: @color4;
@@ -118,7 +150,7 @@ QPlainTextEdit{
 }
 QPlainTextEdit:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
     border: 1px solid @color1;
 }
 QProgressBar{
@@ -134,16 +166,16 @@ QProgressBar{
 }*/
 QProgressBar:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
 }
 QPushButton[objectName|="pushButton_"]{
-    color: #000000;
+    color: @color12;
     border: 1px solid #111111;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
     font-family: "Ubuntu";    
 }
 QPushButton[objectName|="pushButton_"]:disabled{
-    color: @color9;
+    color: @color13;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
 }
 QPushButton[objectName|="pushButton_"]:hover{
@@ -157,14 +189,14 @@ QRadioButton{
     font-family: "Ubuntu";    
 }
 QRadioButton:disabled{
-    color: @color1;
+    color: @color13;
     background-color: rgba(0,0,0,0);
 }
 QRadioButton::indicator:unchecked {
-    image: url(@icon_path/radio-unchecked.png);
+    image: url(@icon_path/@radio_unchecked_enabled);
 }
 QRadioButton::indicator:checked {
-    image: url(@icon_path/radio-checked.png);
+    image: url(@icon_path/@radio_checked_enabled);
 }
 QScrollBar{
     background: @color2;
@@ -195,7 +227,7 @@ QSpinBox{
 }
 QSpinBox:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
     border: 1px solid @color1;
 }
 QSpinBox::up-button {
@@ -215,15 +247,17 @@ QTableWidget{
     background-color: @color5;
     color: @color4;
     border: 1px solid #111111;
-    font-family: "Ubuntu";    
+    font-family: "Ubuntu";
+    font-size: 10pt;
 }
-QTableWidget > QHeaderView{
+QTableWidget > QHeaderView{  /*broken, don't know how to fix*/
     background-color: @color2;
     color: @color4;
+    font-size: 10pt;
 }
-QTableWidget > QHeaderView:disabled{
+QTableWidget > QHeaderView:disabled{  /*broken, don't know how to fix*/
     background-color: @color2;
-    color: @color1;
+    color: @color13;
 }
 QTableWidget > QTableCornerButton{
     background-color: @color2;
@@ -231,7 +265,7 @@ QTableWidget > QTableCornerButton{
 }
 QTableWidget:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
 }
 QTableWidget::item:selected{  /*different*/
     background-color: #F6724F;
@@ -257,9 +291,9 @@ QTableWidget > QTableCornerButton::section{  /*different*/
     width: 132px; 
 }
 QTabBar::tab:disabled {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #eeeeee, stop:0.12 #888888, stop:0.3 #666666,   stop:0.85 #444444, stop:1 #444444);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color8, stop: 1 @color9);
     border: 1px solid #444444;
-    color: rgb(150, 150, 150);
+    color: @color13
 }
 QTabWidget::pane { 
     border: 1px solid @color3;
@@ -291,7 +325,7 @@ QTextEdit{
 }
 QTextEdit:disabled{
     background-color: @color5;
-    color: @color1;
+    color: @color13;
     font-family: "Ubuntu";
     border: 1px solid @color1;
 }
@@ -436,25 +470,21 @@ QTextEdit[objectName|="textEdit2_"]{
 }
 
 
-
 QTableWidget[objectName|="tableWidget1_"]{border: 1px solid @color3;}
-#tableWidget1_attack_flow_graph_current_values > QHeaderView {font-size: 10pt;}
-#tableWidget1_attack_packet_editor > QHeaderView {font-size: 10pt;}
-#treeWidget_attack_attacks > QHeaderView {font-size: 10pt;}
 
 QLabel[objectName|="label1_"]{
     qproperty-alignment: AlignCenter;
     border: 1px solid @color3;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3,   stop:0.85 @color3, stop:1 @color3);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3, stop:0.85 @color3, stop:1 @color3);
     padding: 0px 0px;
     color: @color4;
     max-height: 20px;
     font: bold 10pt "Ubuntu";
 }
 QLabel[objectName|="label2_"]{color: @color4;}
-QLabel[objectName|="label2_"]:disabled{color: @color1;}
+QLabel[objectName|="label2_"]:disabled{color: @color13;}
 QLabel[objectName|="label3_"]{
     color: @color4;
     border: 1px solid @color1;
@@ -527,16 +557,6 @@ QWidget#scrollAreaWidgetContents_2 {
     background-color: @color1;
 }
 
-QMenuBar#menubar {
-    color: @color4;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, x3: 0, y3: 1, stop: 0 @color2, stop: 0.1 @color5, stop: 1 @color1);
-    /*background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 @color2, stop: 1 @color1,);*/
-    /*border-bottom: 1px solid black;*/
-}
-QMenuBar#menubar::item:focus:pressed {background:transparent;}
-/*QMenuBar#menubar::item:selected {background: transparent;}*/
-QMenuBar#menubar::item{background: transparent;}
-
 
 QFrame[objectName|="line1_"]{background: @color3;}
 QFrame[objectName|="line2_"]{background: @color1;}
@@ -550,87 +570,16 @@ QTabWidget#tabWidget2_2::pane{
     border-bottom-right-radius: 15px;    
 }
 
-QComboBox[objectName|="comboBox_"] {
-    padding-left: 4px;
-    color: #000000;
-    border: 1px solid @color2;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
-    padding: 1px 18px 1px 5px;
-}
-QComboBox[objectName|="comboBox_"]::item {
-    color: @color4;
-}
-QComboBox[objectName|="comboBox_"]:disabled{
-    padding-left: 4px;
-    color: @color9;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
-}
-QComboBox[objectName|="comboBox_"]:hover{
-    padding-left: 4px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
-}
-QComboBox[objectName|="comboBox_"]::item:selected{
-    background-color: #F6724F;
-    color: #FFFFFF;
-}
-QComboBox[objectName|="comboBox2_"]{
-    padding-left: 4px;
-    color: #000000;
-    border: 1px solid #111111;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
+
+QComboBox[objectName|="comboBox2_"] {
     font: 10pt "Ubuntu";
 }
-QComboBox[objectName|="comboBox2_"]::item {
-    color: @color4;
-}
-QComboBox[objectName|="comboBox2_"]:disabled{
-    padding-left: 4px;
-    color: @color9;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
+QComboBox[objectName|="comboBox2_"] QListView {
     font: 10pt "Ubuntu";
-}
-QComboBox[objectName|="comboBox2_"]:hover{
-    padding-left: 4px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
-}
-QComboBox[objectName|="comboBox2_"]::item:selected{
-    background-color: #F6724F;
-    color: #FFFFFF;
-    border: 1px solid transparent;  /* needs border to move indicator */
-}
-QComboBox[objectName|="comboBox2_"]::indicator{
-    background-color:transparent;
-    selection-background-color:transparent;
-    color:transparent;
-    selection-color:transparent;
 }
 QComboBox[objectName|="comboBox3_"] {
-    color: #000000;
-    border: 1px solid @color2;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
-    padding: 1px 1px 1px 5px;  /* padding needed for color to work */
-    text-align: right;
-}
-QComboBox[objectName|="comboBox3_"]::item {
-    color: @color4;
-}
-QComboBox[objectName|="comboBox3_"]:disabled{
-    color: @color9;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
-}
-QComboBox[objectName|="comboBox3_"]:hover{
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
-}
-QComboBox[objectName|="comboBox3_"]::item:selected{
-    background-color: #F6724F;
-    color: #FFFFFF;
-    border: 1px solid transparent;  /* needs border to move indicator */
-}
-QComboBox[objectName|="comboBox3_"]::indicator{
-    background-color:transparent;
-    selection-background-color:transparent;
-    color:transparent;
-    selection-color:transparent;
+    padding: 1px 1px 1px 5px;  /* padding needed for color to work, also prevents right align, leaving comboBox3 here in case there is a right-align solution someday */
+    /*text-align: right;*/
 }
 
 
